// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds-hover() should return correct css for opts: { borderRadius: '6px' } 1`] = `
"div {
  border-radius: 6px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.24s) ease;
}
@media (hover: hover) {
  div:hover {
    background: rgba(148, 149, 152, 0.18);
  }
}"
`;

exports[`pds-hover() should return correct css for opts: { borderRadius: 'medium' } 1`] = `
"div {
  border-radius: 8px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.24s) ease;
}
@media (hover: hover) {
  div:hover {
    background: rgba(148, 149, 152, 0.18);
  }
}"
`;

exports[`pds-hover() should return correct css for opts: { borderRadius: 'small' } 1`] = `
"div {
  border-radius: 4px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.24s) ease;
}
@media (hover: hover) {
  div:hover {
    background: rgba(148, 149, 152, 0.18);
  }
}"
`;

exports[`pds-hover() should return correct css for opts: {} 1`] = `
"div {
  border-radius: 4px;
  margin-left: -2px;
  margin-right: -2px;
  padding-left: 2px;
  padding-right: 2px;
  transition: background var(--p-transition-duration, 0.24s) ease;
}
@media (hover: hover) {
  div:hover {
    background: rgba(148, 149, 152, 0.18);
  }
}"
`;
